--- a/index.html
+++ b/index.html
@@ -1,11 +1,116 @@
+<!DOCTYPE html>
 <html>
 
 <head>
+    <title>Home Church Menu</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+
+    <style>
+        body {
+            background-color: black;
+            color: white;
+            text-align: left;
+            font-family: 'Arimo', sans-serif;
+        }
+    </style>
 
 </head>
 
 <body>
-    <h1>hello World</h1>
+    <div class="container-fluid">
+        <img src="logo.png" width="10%" alt="home church Logo" />
+    </div>
+    <br>
+    <div class="container-fluid">
+        <div class="row">
+             <div class="col" style=" color:black">
+                <div class="card" style="width: 20rem;">
+                    <img class="card-img-top" width="100%" height="168px" src="clock.jpeg" alt="Card image cap">
+                    <div class="card-block">
+                        <h4 class="card-title">Standard Clock</h4>
+                        <p class="card-text">A Simple clock with no extras</p><br>
+                        <a href="ClockOnly.html" class="btn btn-primary">Visit Clock</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col" style=" color:black">
+                <div class="card" style="width: 20rem;">
+                    <img class="card-img-top" width="100%" height="168px" src="Sunday-Service-Final.jpg" alt="Card image cap">
+                    <div class="card-block">
+                        <h4 class="card-title">Sunday Clock</h4>
+                        <p class="card-text">Sunday clock for two morning Services and with customisable times</p>
+                        <a href="SundayClock.html" class="btn btn-primary">Visit Clock</a>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="col" style=" color:black">
+                <div class="card" style="width: 20rem;">
+                    <img class="card-img-top" width="100%" height="168px"  src="communionclock.jpg" alt="Card image cap">
+                    <div class="card-block">
+                        <h4 class="card-title">Communion Clock</h4>
+                        <p class="card-text">A Sunday Clock, for one services built around a communion service.</p>
+                        <a href="CommunionClock.html" class="btn btn-primary">Visit Clock</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col" style=" color:black">
+                <div class="card" style="width: 20rem;">
+                    <img class="card-img-top" width="100%" height="168px" src="baptism.jpg" alt="Card image cap">
+                    <div class="card-block">
+                        <h4 class="card-title">Baptism Clock</h4>
+                        <p class="card-text">A sunday clock for one service, which runs a baptism clock.</p>
+                        <a href="BaptismClock.html" class="btn btn-primary">Visit Clock</a>
+                    </div>
+                </div>
+            </div>   
+        </div>
+        <br>
+        <div class="row">
+             <div class="col" style=" color:black">
+                <div class="card" style="width: 20rem;">
+                    <img class="card-img-top" width="100%" height="168px" src="WorshipSeriesTitleSlide.jpg" alt="Card image cap">
+                    <div class="card-block">
+                        <h4 class="card-title">Worship Clock</h4>
+                        <p class="card-text">A sunday clock for one service, which runs a worship set clock.</p>
+                        <a href="WorshipClock.html" class="btn btn-primary">Visit Clock</a>
+                    </div>
+                </div>
+            </div>
+             <div class="col" style=" color:black">
+                <div class="card" style="width: 20rem;">
+                    <img class="card-img-top" width="100%" height="168px" src="3Preachers.jpg" alt="Card image cap">
+                    <div class="card-block">
+                        <h4 class="card-title">Three Preachers</h4>
+                        <p class="card-text">A sunday clock for one service, which runs a Three Preachers set clock.</p>
+                        <a href="threePreachers.html" class="btn btn-primary">Visit Clock</a>
+                    </div>
+                </div>
+            </div>
+               <div class="col" style=" color:black">
+                <div class="card" style="width: 20rem;">
+                    <img class="card-img-top" width="100%" height="168px" src="EVENTS.png" alt="Card image cap">
+                    <div class="card-block">
+                        <h4 class="card-title">Special Events</h4>
+                        <p class="card-text">A fully customisable clock, for special event which runs for a single service. </p>
+                        <button  class="btn btn-primary" disabled>Coming Soon</button>
+                    </div> 
+                </div>
+            </div>
+            <div class="col" style=" color:black">
+            </div>
+           
+        </div>
+    </div>
+    
+    <br><br>
+
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </body>
 
 </html>
